# MDQ

./: .gitignore  data.js  eda_findings.md  final_solution.ipynb  index.html  notion.md  pyproject.toml  script.js  styles.css
EDA/: 00_data_overview.ipynb  01_data_quality.ipynb  02_transaction_behavior.ipynb  03_card_level_behavior.ipynb  README.md  edd_findings.md
dashboard/: data.js  styles.css
docs/: creativity_business_artifacts.md  feature_diagnostics_followup.md  final_notebook_pipeline.md  ml_pu_experiment_plan.md
features/: 00_feature_plan.md  01_build_features.ipynb  02_feature_checks.ipynb  README.md
mdq/: __init__.py  data.py
models/: 00_model_plan.md  01_baseline_supervised.ipynb  02_pu_learning.ipynb  03_pu_experiments.ipynb  README.md
notebooks/: eda.ipynb  mdq26_solution.ipynb
scripts/: mcc_ref_from_pdf.py
