[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdq"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastparquet",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pdfplumber",
    "pulearn",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["mdq*"]
